--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,18 +10,20 @@
     <string name="title_activity_maps_fragment">Map</string>
     <string name="app_name1">Giới thiệu</string>
     <string name="content">
-        - Phần mềm Finding Home là phần mềm trên điện thoại di động thông minh
-    sử dụng hệ điều hành Android.
-        - Phần mềm Finding Home cóc chức năng tìm kiếm thông qua Google API
-        - Phần mềm hỗ trợ 2 ngôn ngữ(Anh, Việt).
+        - Phần mềm Finding Room là phần mềm trên điện thoại di động thông minh
+    sử dụng hệ điều hành Android.\n
+        - Phần mềm Finding Home cóc chức năng tìm kiếm thông qua Google API \n
+        - Phần mềm hỗ trợ 2 ngôn ngữ(Anh, Việt).\n
         - Để đáp ứng nhu cầu của người sử dụng, phần mềm ra đời giúp cho người sử dụng dễ tìm kiếm
-    phòng trọ hơn mà không cần phải đi khắp nơi để tìm kiếm.
-        - Phần mềm có các chức năng chính như:
-            + Tìm kiếm theo từ khóa
-            + Đăng thông tin và hình ảnh về phòng trọ mà người dùng muốn cho thuê
-        - Chúng tôi, những người làm ra phần mềm này cam kết giúp người dùng trải nghiệm phần mềm tốt nhất, tiện lợi nhất.
-        Những người thực hiện: Lê Mạnh Cường, Hà Thị Lam, Nguyễn Bá Mạnh
+    phòng trọ hơn mà không cần phải đi khắp nơi để tìm kiếm.\n
+        - Phần mềm có các chức năng chính như:\n
+            \t + Tìm kiếm theo từ khóa \n
+            \t + Đăng thông tin và hình ảnh về phòng trọ mà người dùng muốn cho thuê ...\n
+        - Chúng tôi, những người làm ra phần mềm này cam kết giúp người dùng trải nghiệm phần mềm tốt nhất, tiện lợi nhất.\n
+        Những người thực hiện: Lê Mạnh Cường, Hà Thị Lam, Nguyễn Bá Mạnh \n
         Địa chỉ: Tòa nhà H, Hàm Nghi, Mĩ Đình, Băc Từ Liêm, Hà Nội.</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="promt_spinner">Chọn quận để tìm...</string>
 </resources>
